--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Pillow
 django
 django-ckeditor
-django-rest-aut
+django-rest-auth
 django-rest-framework-social-oauth2
 django-allauth
 django-cors-headers
